--- a/Online_Full_NoAuto.ini
+++ b/Online_Full_NoAuto.ini
@@ -60,7 +60,7 @@ custom_proxy_group=🇸🇬 狮城节点`select`((?i)🇸🇬|新加坡|狮|(\b(
 custom_proxy_group=🇦🇺 澳洲节点`select`((?i)🇦🇺|澳大利亚|(\b(AU|Australia)\b))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`select`((?i)🇬🇧|英国|伦敦|(\b(UK|United Kingdom)\b))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇮🇳 印度节点`select`((?i)🇮🇳|印度|班加罗尔|孟买|(\b(Mumbai|IN|India)\b))`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=🇰🇷 韩国节点`select`((?i)🇰🇷|韩国|韓|首尔|(\b(KR|Korea)\b))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`select`((?i)🇰🇷|韩国|韓|首尔|(\b(KR|Korea)\b))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
